# OSFDA

./: .gitignore  OSFDA_Thesis_Report.md  README.md  impementation_plan.md  implementation_plan.md  new-feature.txt  problem.txt  project_details.txt  pyproject.toml  requirements.txt
backend/: requirements.txt
configs/: category_taxonomy_v1.yaml  cost_matrix.yaml  feature_whitelist.yaml  main_config.yaml  severity_rubric_v1.yaml
frontend/: README.md  codegen.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
models/: category_model_info.json  optuna_study_summary.json  preflight_eval_results.json  preflight_model_info.json  severity_feature_cols.json  severity_model_info.json
notebooks/: 00_data_acquisition.ipynb  01a_rubric_iteration.ipynb  01b_taxonomy_definition.ipynb  01c_leakage_audit.ipynb  01d_temporal_split_eda.ipynb  01e_redaction_impact.ipynb  02b_category_model.ipynb  03a_ntsb_acquisition.ipynb  03b_bts_flights.ipynb  03c_case_control.ipynb  03d_weather_enrichment.ipynb  03e_preflight_features.ipynb  03f_preflight_model.ipynb  05a_ntsb_acquisition.ipynb  05b_bts_flights.ipynb  05c_case_control.ipynb  05d_weather_enrichment.ipynb  05e_preflight_features.ipynb  05f_preflight_model.ipynb  06a_problem_A_severity_viz.ipynb  06b_problem_B_category_viz.ipynb  06d_problem_D_emerging_risks_viz.ipynb  06e_problem_E_factor_graph_viz.ipynb
scratch/: check_parquet.py  eval_metrics.py  eval_metrics2.py
scripts/: _rubric_diagnosis.py  _test_rubric_v3.py  benchmark_catboost.py  evaluate_preflight.py  export_model_artifacts.py  run_phase1.py  (+10 more)
(+96 files in other folders)
