[project]
name = "flight-risk-analysis-rebuild"
version = "0.1.0"
description = "Comprehensive aviation safety risk analysis and prediction system"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "xgboost",
    "optuna>=3.0",
    "shap>=0.44",
    "sentence-transformers>=2.2",
    "bertopic>=0.16",
    "datasets>=2.0",
    "pyyaml",
    "ruptures>=1.1",
    "mlflow",
    "pytest",
    "ipykernel",
    "nbformat",
    "plotly"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
